Inicio do projeto

--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocha e Rossi Advogadas Associadas</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="javascript/scripts.js"></script>
+
+    <!--LINKS CSS-->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/normaliza.css">
+    <!--LINKS JAVASCRIPT-->
+    <script src="/javascript/scripts.js"></script>
+    <title>Rocha e Rossi Advogadas ASSOCIADAS</title>
 </head>
 <body>
-    
+    <div id="header">
+        <div class="menu">
+            <a href="">Home</a>
+            <a href="">Sobre</a>
+            <a href="">Serviços</a>
+            <a href="">Contatos</a>
+        </div>   
+      <h1 class="titleLogo">Maria Carolina & <span>Jaqueline Rossi</span></h1>
+      <p class="textLogo">Advogadas Associadas</p>
+    </div>
+    <div id="content">
+    <h1 class="services">Serviços Jurídicos</h1>
+    <p class="text">Experiência, qualidade e sucesso.</p> 
+    <button>SAIBA MAIS</button>   
+    </div>
 </body>
 </html>
