--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--LINKS CSS-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/normaliza.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/normaliza.css">
     <!--LINKS JAVASCRIPT-->
-    <script src="/javascript/scripts.js"></script>
+    <script src="./javascript/scripts.js"></script>
     <title>Rocha e Rossi Advogadas ASSOCIADAS</title>
 </head>
 <body>
