link normalize.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!--LINKS CSS-->
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/normaliza.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <!--LINKS JAVASCRIPT-->
     <script src="./javascript/scripts.js"></script>
     <title>Rocha e Rossi Advogadas ASSOCIADAS</title>
