--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="header">
         <div class="menu">
             <a href="">Home</a>
-            <a href="">Sobre</a>
+            <a href="./páginas/Sobre-Nos.html">Sobre Nós</a>
             <a href="">Serviços</a>
             <a href="">Contatos</a>
         </div>   
@@ -26,7 +26,7 @@
     <div id="content">
     <h1 class="services">Serviços Jurídicos</h1>
     <p class="text">Experiência, qualidade e sucesso.</p> 
-    <button>SAIBA MAIS</button>   
+    <button>SAIBA MAIS SOBRE NOSSO ESCRITÓRIO</button>   
     </div>
     <!-- Formulário -->
     <div class="row-form">
